clusters/_common/apps/dashboard/homer/homer.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homer-service
  namespace: dashboard
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: homer
